--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,11 +76,11 @@ jobs:
     - name: x86_64-linux Build
       if: matrix.os == 'ubuntu-latest'
 #      run: nix build -L .#{kratos,brenda-blade,chromebook,inix,kronos}
-      run: nix build -L .#nixosConfigurations.${{x86}}.config.system.build.toplevel
+      run: nix build -L .#nixosConfigurations.${{machine}}.config.system.build.toplevel
 
     - name: aarch64 Build
       if: matrix.os == 'ubuntu-24.04-arm'
-      run: nix build -L .#nixosConfigurations.${{arm}}.config.system.build.toplevel
+      run: nix build -L .#nixosConfigurations.${{machine}}.config.system.build.toplevel
 
     - name: Deploy
       run: |
