git update, renaming Brenda-Blade to Blade & adding Brenda

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           - os: ubuntu-latest
             host: kratos
           - os: ubuntu-latest
-            host: brenda-blade
+            host: blade
           - os: ubuntu-latest
             host: nixbook
           - os: ubuntu-latest
